--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "knex": "^1.0.3",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "tiny-secp256k1": "^2.2.1"
   }
 }
