--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "bip39": "^3.0.4",
     "bitcoinjs-lib": "^6.0.1",
     "body-parser": "^1.19.2",
+    "coinselect": "^3.1.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
