--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "coinselect": "^3.1.12",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "ecpair": "^2.0.1",
     "express": "^4.17.3",
     "knex": "^1.0.3",
     "pg": "^8.7.3",
