--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
     "@types/knex": "^0.16.1",
     "@types/pg": "^8.6.4",
     "axios": "^0.26.0",
@@ -30,6 +31,7 @@
     "dotenv": "^16.0.0",
     "ecpair": "^2.0.1",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "knex": "^1.0.3",
     "pg": "^8.7.3",
     "tiny-secp256k1": "^2.2.1"
