--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,16 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/knex": "^0.16.1",
     "@types/pg": "^8.6.4",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.26.0",
+    "bcryptjs": "^2.4.3",
     "bip32": "^3.0.1",
     "bip39": "^3.0.4",
     "bitcoinjs-lib": "^6.0.1",
@@ -32,8 +36,10 @@
     "ecpair": "^2.0.1",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
     "pg": "^8.7.3",
-    "tiny-secp256k1": "^2.2.1"
+    "tiny-secp256k1": "^2.2.1",
+    "uuid": "^8.3.2"
   }
 }
