--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@types/node": "17.0.19",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
 }
