--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "axios": "^0.26.1",
+    "bitcoinjs-lib": "^6.0.1",
     "formik": "^2.2.9",
     "next": "12.1.0",
     "node-sass": "^7.0.1",
