--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cryptr": "^4.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
@@ -32,6 +33,7 @@
     "body-parser": "^1.19.2",
     "coinselect": "^3.1.12",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.2",
     "dotenv": "^16.0.0",
     "ecpair": "^2.0.1",
     "express": "^4.17.3",
