--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-qr-code": "^2.0.4",
     "sweetalert": "^2.1.2",
     "yup": "^0.32.11"
   },
