--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "A fullstack bitcoin wallet application",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register tests/*.spec.ts --exit",
     "dev": "nodemon ./index.ts"
   },
   "author": "",
@@ -12,6 +12,10 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
+    "@types/mocha": "^9.1.0",
+    "@types/supertest": "^2.0.12",
+    "mocha": "^9.2.2",
+    "supertest": "^6.2.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
