--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "mocha -r ts-node/register tests/*.spec.ts --exit",
-    "dev": "nodemon ./index.ts"
+    "dev": "ts-node ./index.ts"
   },
   "author": "",
   "license": "ISC",
